force-app/main/default/objects/Case/fields/Follow_Up_Request_Created__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Request_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow Up Request Created</label>
    <type>Checkbox</type>
</CustomField>