force-app/main/default/objects/Case/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For approvals - the manager of the requesting user</description>
    <inlineHelpText>For approvals - the manager of the requesting user</inlineHelpText>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Subordinate_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>