force-app/main/default/objects/Case/fields/Primary_Object__c.field-meta.xml
<CustomField>
    <fullName>Primary_Object__c</fullName>
    <description>Select if request is related to a specific object</description>
    <inlineHelpText>Select if request is related to a specific object</inlineHelpText>
    <label>Primary Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>NA or Multi-Object</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>