force-app/main/default/objects/Case/listViews/AllClosedCases.listView-meta.xml
<ListView>
    <fullName>AllClosedCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Requester__c</columns>
    <columns>CASES.TYPE</columns>
    <columns>Primary_Object__c</columns>
    <columns>CASES.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Closed Cases</label>
</ListView>