force-app/main/default/objects/Case/listViews/Closed_Salesforce_Tickets.listView-meta.xml
<ListView>
    <fullName>Closed_Salesforce_Tickets</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Requester__c</columns>
    <columns>CASES.TYPE</columns>
    <columns>Primary_Object__c</columns>
    <columns>CASES.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Salesforce_Ticket</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>Closed Salesforce Tickets</label>
</ListView>